# genforge

./: .gitignore  LICENSE  MANIFEST.in  README.ko.md  README.md  README_pypi.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
benchmark/: _utils.py  adult.py  categorical_robustness.py  covertype.py  credit_default.py  generate_figures.py  generate_tables.py  give_me_some_credit.py  higgs.py  large_bench.py  missing_value_robustness.py  optimize.py  optuna_tune.py  quick_bench.py  rotated_synthetic.py  run_all.py
benchmark/results/: best_params.json  summary.md
benchmark/results/csv/: adult.csv  categorical_robustness.csv  covertype.csv  credit_default.csv  give_me_some_credit.csv  higgs.csv  missing_value_robustness.csv  rotated_synthetic.csv  rotation_robustness.csv
docs/: THEORY.ko.md  THEORY.md  algorithm.ko.md  algorithm.md  algorithm_en.md  algorithm_ko.md  api.ko.md  api.md  cov_oqboost.en.md  cov_oqboost.md  exp_ablation_regularization.md  quickstart.ko.md  quickstart.md  research.en.md  research.md  salot_theory.md
research/: FINDINGS.md  THEORY.md  adaptive_comparison.py  adaptive_constraint_study.md  angle_distribution.py  angle_distribution_study.md  blend_comparison.py  blend_ratio_study.md  budget_comparison.py  budget_experiment.py  budget_experiment_results.json  cache_comparison.py  cache_enhancement_study.md  candidate_width_experiment.py  candidate_width_results.csv  candidate_width_study.md  comprehensive_validation.py  cosine_comparison.py  cosine_constraint_study.md  cov_experiment.py  cov_experiment_results.json  cpp_ablation.py  debug_patch.py  demo.py  density_budget_study.md  density_comparison.py  diversity_continuity.py  drift_analysis.py  e7_matched.py  family_allocation.py  final_validation.py  head_to_head_bench.py  head_to_head_comparison.py  head_to_head_report.md  mechanism_study.py  noise_comparison.py  noise_mutation_study.md  oqboost_cov_pytorch.py  oqboost_research.py  orth_comparison.py  (+25 more)
src/genforge/: __init__.py  _classifier.py  _genforge.py  _tree.py
src/genforge/_ext/: bfstree.cpp  bfstree_types.h  genforge.cpp  genforge_core.h  libbfstree.dylib
src/hypforge/: __init__.py  _classifier.py  _evopool.py  _gos.py  _pool.py  _pool.pyx  _salot.py  _testforge.py  _tree.py
src/hypforge/_ext/: bfstree.cpp  bfstree_types.h  evopool.cpp  gos.cpp  hypforge.cpp  salot.cpp  salot_core.h
src/oqboost/: __init__.py  _classifier.py  _oqboost.py  _regressor.py
src/oqboost/_ext/: liboqboost.dylib  oqboost.cpp  oqboost_core.h  oqboost_types.h
tests/: test_classifier.py  test_regressor.py  test_regularization.py
