[build-system]
requires = ["setuptools>=68", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "hypforge"
version = "0.1.1"
description = "Hypothesis Pool Evolution for Oblique GBDT — high-performance C++ tree backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["gradient-boosting", "oblique-trees", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "pandas>=2.3.3",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev  = ["pytest>=8.0", "pytest-cov", "pandas", "matplotlib"]
full = ["pandas", "matplotlib"]

[project.urls]
Homepage   = "https://github.com/cree1116/hypforge"
Repository = "https://github.com/cree1116/hypforge"
Issues     = "https://github.com/cree1116/hypforge/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hypforge" = ["_ext/libbfstree.dylib", "_ext/libbfstree.so", "_ext/bfstree.dll", "*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
