[build-system]
requires = ["setuptools>=68", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "oqboost"
version = "0.1.1"
description = "GG-SRP hereditary oblique GBDT — native NaN/categorical, high-performance C++ backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["gradient-boosting", "oblique-trees", "machine-learning", "tabular-data", "random-projection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "pandas>=2.3.3",
    "scikit-learn>=1.3",
    "torch>=2.12.0",
]

[project.optional-dependencies]
dev  = ["pytest>=8.0", "pytest-cov", "pandas", "matplotlib"]
full = ["pandas", "matplotlib"]

[project.urls]
Homepage      = "https://github.com/cree1116/oqboost"
Repository    = "https://github.com/cree1116/oqboost"
Issues        = "https://github.com/cree1116/oqboost/issues"
Documentation = "https://github.com/cree1116/oqboost/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"oqboost" = ["_ext/liboqboost.dylib", "_ext/liboqboost.so", "_ext/oqboost.dll", "*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
